--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=task-management-app
-spring.datasource.url=jdbc:mysql://localhost:3306/taskmanagement?serverTimeZone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/task_management?serverTimeZone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
