--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=task-management-app
+spring.datasource.url=jdbc:mysql://localhost:3306/task_management?serverTimeZone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+server.servlet.context-path=/api
+
+logging.level.org.springframework.security=DEBUG
