--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.open-in-view=false
 server.servlet.context-path=/api
 
 logging.level.org.springframework.security=DEBUG
+
+jwt.expiration=3600000
+
+jwt.secret=hfhsjs74359jgfjgkdfldlnhhydg36478dfkklgfbfghhg
