added jwt values to test application properties

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+jwt.secret=hfhsjs74359jgfjgkdfldlnhhydg36478dfkklgfbfghhg
+
+jwt.expiration=3600000
