Add user controller (#11)
* implemented getUserProfileInfo

* implemented updateProfileInfo method

* added updateRole method

* run mvn clean package

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,1 +1,3 @@
 constraints.validfieldvalue=Field value is invalid
+constraints.ValidEnumCollection=Enum collection values are invalid
+constraints.fieldmatchValidationError=Validation error: cannot access fields
