--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ jwt.expiration=3600000
 
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+
+dropbox.appKey=${DROPBOX_APP_KEY:dummy-key}
+dropbox.appSecret=${DROPBOX_APP_SECRET:dummy-secret}
+dropbox.refreshToken=${DROPBOX_REFRESH_TOKEN:dummy-token}
