refactored env variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,6 @@ jwt.expiration=3600000
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
-dropbox.appKey=${DROPBOX_APP_KEY:dummy-key}
-dropbox.appSecret=${DROPBOX_APP_SECRET:dummy-secret}
-dropbox.refreshToken=${DROPBOX_REFRESH_TOKEN:dummy-token}
+dropbox.appKey=${DROPBOX_APP_KEY}
+dropbox.appSecret=${DROPBOX_APP_SECRET}
+dropbox.refreshToken=${DROPBOX_REFRESH_TOKEN}
