implemented dropbox download upload (#13)
* implemented dropbox download upload

* refactored env variables

* refactored env variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,9 @@ jwt.secret=hfhsjs74359jgfjgkdfldlnhhydg36478dfkklgfbfghhg
 
 jwt.expiration=3600000
 
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
+dropbox.appKey=${DROPBOX_APP_KEY}
+dropbox.appSecret=${DROPBOX_APP_SECRET}
+dropbox.refreshToken=${DROPBOX_REFRESH_TOKEN}
