implemented notificationfor project and task, added swagger documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,14 @@ spring.servlet.multipart.max-request-size=50MB
 dropbox.appKey=${DROPBOX_APP_KEY}
 dropbox.appSecret=${DROPBOX_APP_SECRET}
 dropbox.refreshToken=${DROPBOX_REFRESH_TOKEN}
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=1234
+spring.mail.password=1234
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+app.base-url=http://localhost:8080/api/
+app.email-templates.path=/notificationEmails/
