--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -11,3 +11,8 @@ spring.jpa.show-sql=true
 jwt.secret=hfhsjs74359jgfjgkdfldlnhhydg36478dfkklgfbfghhg
 
 jwt.expiration=3600000
+
+spring.mail.host=none
+spring.mail.port=0
+app.email-templates.path=classpath:/notificationEmails/
+app.base-url=http://localhost:8080/api/
