--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,5 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 app.base-url=http://localhost:8080/api/
 app.email-templates.path=/notificationEmails/
+
+management.endpoints.web.exposure.include=health
