--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=task-management-app
 spring.datasource.url=jdbc:mysql://localhost:3306/task_management?serverTimeZone=UTC
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=hfjsdksd3547lkh
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -24,8 +24,8 @@ dropbox.refreshToken=${DROPBOX_REFRESH_TOKEN}
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=1234
-spring.mail.password=1234
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
