--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,12 +1,15 @@
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.sql.init.mode=always
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+spring.liquibase.enabled=false
 
 jwt.secret=hfhsjs74359jgfjgkdfldlnhhydg36478dfkklgfbfghhg
 
