--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,10 @@ spring.datasource.username=root
 spring.datasource.password=hfjsdksd3547lkh
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 server.servlet.context-path=/api
-
-logging.level.org.springframework.security=DEBUG
 
 jwt.secret=hfhsjs74359jgfjgkdfldlnhhydg36478dfkklgfbfghhg
 
@@ -33,4 +31,5 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 app.base-url=http://localhost:8080/api/
 app.email-templates.path=/notificationEmails/
 
-management.endpoints.web.exposure.include=health
+management.endpoints.web.exposure.include=health,info,startup
+
