--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=task-management-app
 spring.datasource.url=jdbc:mysql://localhost:3306/task_management?serverTimeZone=UTC
 spring.datasource.username=root
-spring.datasource.password=hfjsdksd3547lkh
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=none
@@ -32,4 +32,3 @@ app.base-url=http://localhost:8080/api/
 app.email-templates.path=/notificationEmails/
 
 management.endpoints.web.exposure.include=health,info,startup
-
